tests/rosetta/out/Smalltalk/averages-simple-moving-average.out
/tmp/averages-simple-moving-average.st:5: parse error, expected ']'
